--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -60,7 +60,7 @@
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Register</button>
-                    <span>Already registered? <a href="/" th:href="@{auth/login}">Login
+                    <span>Already registered? <a href="/" th:href="@{login}">Login
 								here</a></span>
                 </div>
             </form>
