--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 
             <h1> Sign-in </h1>
 <!--            <form th:action="@{/tasks}" method="post">-->
-                <form th:action="@{/auth/login}" method="post">
+                <form th:action="@{/login}" method="post">
 
                 <!-- error message -->
                 <div th:if="${param.error}">
