edit form working on

--- a/src/main/resources/templates/task-form.html
+++ b/src/main/resources/templates/task-form.html
@@ -12,25 +12,34 @@
     <input name="user_id" type="hidden" th:value="${user_id}">
     <div class="mb-3">
       <label>Title:</label>
-      <input type="text" name="title" class="form-control" th:field="*{title}" required>
+      <input type="text" id="title" name="title" class="form-control" th:field="*{title}" required>
     </div>
     <div class="mb-3">
       <label>Description:</label>
-      <textarea class="form-control" name="description" th:field="*{description}" required></textarea>
+      <textarea class="form-control" id="description" name="description" th:field="*{description}" required></textarea>
     </div>
     <div class="mb-3">
       <label>Due Date:</label>
-      <input type="datetime-local" name="dueDate" class="form-control" th:field="*{dueDate}" required>
+      <input type="datetime-local" id="dueDate" name="dueDate" class="form-control" th:field="*{dueDate}" required>
     </div>
     <div class="mb-3">
       <label>Priority:</label>
-      <select class="form-control" name="status" th:field="*{status}">
-        <option th:each="statusOption : ${T(com.example.demo.Enum.TaskStatus).values()}"
-                th:value="${statusOption}"
-                th:text="${statusOption}">
-        </option>
+      <select id="priority" class="form-control" th:field="*{priority}">
+        <option value="LOW">Low</option>
+        <option value="MEDIUM">Medium</option>
+        <option value="HIGH">High</option>
       </select>
     </div>
+    <input type="hidden" name="status" value="PENDING">
+<!--    <div class="mb-3">-->
+<!--      <label>Priority:</label>-->
+<!--      <select class="form-control" name="status" th:field="*{status}">-->
+<!--        <option th:each="statusOption : ${T(com.example.demo.Enum.TaskStatus).values()}"-->
+<!--                th:value="${statusOption}"-->
+<!--                th:text="${statusOption}">-->
+<!--        </option>-->
+<!--      </select>-->
+<!--    </div>-->
     <button type="submit" class="btn btn-success">Save Task</button>
     <a href="/tasks" class="btn btn-secondary">Cancel</a>
   </form>
