--- a/src/main/resources/templates/task-list.html
+++ b/src/main/resources/templates/task-list.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Task Scheduler</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <!-- Bootstrap CSS (in <head>) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +11,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script src="/script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
@@ -65,12 +65,13 @@
                 Edit Task
               </div>
               <!-- Form Inside Modal -->
-              <form class="card mb-4" th:action="@{/tasks/editPost}"  method="post" enctype="multipart/form-data">
-                <input name="user_id" type="hidden" th:value="${user_id}">
+              <form class="card mb-4" th:action="@{/tasks/editTask}"  method="post">
+                <input name="user_id" id="user_id" type="hidden" th:value="${user_id}">
                 <div class="mb-3">
                   <label>Title:</label>
                   <input type="text" name="title" id="title" class="form-control" th:text="*{title}" required>
                 </div>
+<!--           -->
                 <div class="mb-3">
                   <label>Description:</label>
                   <textarea class="form-control" id="description" name="description" th:text="*{description}" required></textarea>
@@ -81,7 +82,7 @@
                 </div>
                 <div class="mb-3">
                   <label>Priority:</label>
-                  <select class="form-control" th:value="*{priority}">
+                  <select name ="priority" class="form-control" th:value="*{priority}">
                     <option value="LOW">Low</option>
                     <option value="MEDIUM">Medium</option>
                     <option value="HIGH">High</option>
@@ -104,18 +105,18 @@
     </tbody>
   </table>
 </div>
-
 <script>
   // Reinitialize TinyMCE inside the edit modal
  $(document).on('click', '.test', function () {
      var postId = $(this).data('id');
      console.log(postId);
      $.ajax({
-         url: '/tasks/editPost/' + postId,
+         url: '/tasks/editTask/' + postId,
          type: 'GET',
          success: function (data) {
              console.log(data);
              $('#title').val(data.title);
+             $('#user_id').val(data.id);
              $('#description').val(data.description);
              $('#priority').val(data.priority);
              $('#dueDate').val(data.dueDate);
